[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/tank1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/tank2.png" type="Texture" id=3]
[ext_resource path="res://Sounds/tanknoise.wav" type="AudioStream" id=4]
[ext_resource path="res://Sprites/tankhead.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26, 38 )

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 2

[sub_resource type="ParticlesMaterial" id=4]
render_priority = -1
next_pass = SubResource( 3 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
scale_random = 0.5
color = Color( 0.356863, 0.356863, 0.356863, 1 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="sprTankBody" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 1 )
shape = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -9.087
pitch_scale = 0.61

[node name="parLeftTread" type="Particles2D" parent="."]
position = Vector2( -22.5983, 37.4577 )
z_index = -1
amount = 100
lifetime = 4.0
local_coords = false
process_material = SubResource( 4 )

[node name="parRightTread" type="Particles2D" parent="."]
position = Vector2( 23.7254, 37.0831 )
z_index = -1
amount = 100
lifetime = 4.0
local_coords = false
process_material = SubResource( 4 )

[node name="Pivot" type="Node2D" parent="."]

[node name="sprTankHead" type="Sprite" parent="Pivot"]
position = Vector2( 0, -22.5 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 5 )

[node name="muzzleEnd" type="Node2D" parent="Pivot"]
position = Vector2( 0, -56 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="tmrPrimary" type="Timer" parent="."]
wait_time = 2.0

[node name="tmrSecondary" type="Timer" parent="."]
wait_time = 0.15

[connection signal="timeout" from="tmrPrimary" to="." method="_on_tmrPrimary_timeout"]
[connection signal="timeout" from="tmrSecondary" to="." method="_on_tmrSecondary_timeout"]
